--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,7 @@
 		<script src="js/jquery.fittext.js"></script>
 		<script src="js/magnific-popup.js"></script>
 		<script src="js/init.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
 	</body>
 </html>
