--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 	<noscript> You need to enable JavaScript to run this app. </noscript>
 	<div id="root"></div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<!-- Load jQuery and plugins BEFORE React -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 	<script>
 		window.jQuery ||
 			document.write('<script src="js/jquery-1.10.2.min.js"><\/script>');
@@ -30,9 +31,9 @@
 	<script src="js/waypoints.js"></script>
 	<script src="js/jquery.fittext.js"></script>
 	<script src="js/magnific-popup.js"></script>
-	<script src="js/init.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+
+	<!-- Load init.js AFTER React (moved from here) -->
+	<script src="js/init-after-react.js"></script>
 </body>
 
 </html>
